src/main/java/ac/bristol/bragaglia/xhail/parsers/xhail/XhailParser.java
// Generated from Xhail.g4 by ANTLR 4.2.2

package ac.bristol.bragaglia.xhail.parsers.xhail;

/**
 * @author stefano
 *
 */
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XhailParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AGGR_AVG=1, AGGR_COUNT=2, AGGR_EVEN=3, AGGR_MAX=4, AGGR_MIN=5, AGGR_ODD=6, 
		AGGR_SUM=7, ARITH_ABS=8, ARITH_DIVIDE=9, ARITH_MODULUS=10, ARITH_POWER=11, 
		BIT_AND=12, BIT_NOT=13, BIT_OR=14, BIT_XOR=15, COMP_EQ=16, COMP_GE=17, 
		COMP_GT=18, COMP_LE=19, COMP_LT=20, COMP_NE=21, DIR_COMPUTE=22, DIR_CONST=23, 
		DIR_DOMAIN=24, DIR_EXAMPLE=25, DIR_EXTERNAL=26, DIR_HIDE=27, DIR_MAXIMIZE=28, 
		DIR_MINIMIZE=29, DIR_MODEB=30, DIR_MODEH=31, DIR_SHOW=32, ASTERISK=33, 
		ASTERISKS=34, ASSIGN=35, AT=36, BACKSLASH=37, BAR=38, COLON=39, COMMA=40, 
		CURLY_LEFT=41, CURLY_RIGHT=42, DOT=43, DOTS=44, EQUALS=45, HASH=46, IF=47, 
		MINUS=48, NOT=49, PAREN_LEFT=50, PAREN_RIGHT=51, SEMICOLON=52, PLUS=53, 
		SEMICOLONS=54, SLASH=55, SQUARE_LEFT=56, SQUARE_RIGHT=57, INFIMUM=58, 
		SUPREMUM=59, ALL=60, COMMENT_INLINE=61, COMMENT_MULTI=62, IDENTIFIER=63, 
		INTEGER=64, STRING=65, VARIABLE=66, WHITESPACES=67;
	public static final String[] tokenNames = {
		"<INVALID>", "'#avg'", "'#count'", "'#even'", "'#max'", "'#min'", "'#odd'", 
		"'#sum'", "'#abs'", "'#div'", "'#mod'", "'#pow'", "'&'", "'~'", "'?'", 
		"'^'", "'=='", "'>='", "'>'", "'<='", "'<'", "'!='", "'#compute'", "'#const'", 
		"'#domain'", "'#example'", "'#external'", "'#hide'", "DIR_MAXIMIZE", "DIR_MINIMIZE", 
		"'#modeb'", "'#modeh'", "'#show'", "'*'", "'**'", "':='", "'@'", "'\\'", 
		"'|'", "':'", "','", "'{'", "'}'", "'.'", "'..'", "'='", "'$'", "':-'", 
		"'-'", "'not'", "'('", "')'", "';'", "'+'", "';;'", "'/'", "'['", "']'", 
		"'#infimum'", "'#supremum'", "'all'", "COMMENT_INLINE", "COMMENT_MULTI", 
		"IDENTIFIER", "INTEGER", "STRING", "VARIABLE", "WHITESPACES"
	};
	public static final int
		RULE_program = 0, RULE_directive = 1, RULE_compute = 2, RULE_constant = 3, 
		RULE_domain = 4, RULE_example = 5, RULE_external = 6, RULE_hide = 7, RULE_maximize = 8, 
		RULE_modeBody = 9, RULE_modeHead = 10, RULE_signature = 11, RULE_keyList = 12, 
		RULE_key = 13, RULE_minimize = 14, RULE_show = 15, RULE_groundAtom = 16, 
		RULE_groundTerm = 17, RULE_bound = 18, RULE_bounds = 19, RULE_weight = 20, 
		RULE_priority = 21, RULE_clause = 22, RULE_head = 23, RULE_body = 24, 
		RULE_literal = 25, RULE_predicate = 26, RULE_aggregate = 27, RULE_aggregatew = 28, 
		RULE_group = 29, RULE_atomList = 30, RULE_atom = 31, RULE_interval = 32, 
		RULE_pooling = 33, RULE_number = 34;
	public static final String[] ruleNames = {
		"program", "directive", "compute", "constant", "domain", "example", "external", 
		"hide", "maximize", "modeBody", "modeHead", "signature", "keyList", "key", 
		"minimize", "show", "groundAtom", "groundTerm", "bound", "bounds", "weight", 
		"priority", "clause", "head", "body", "literal", "predicate", "aggregate", 
		"aggregatew", "group", "atomList", "atom", "interval", "pooling", "number"
	};

	@Override
	public String getGrammarFileName() { return "Xhail.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public XhailParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public DirectiveContext directive(int i) {
			return getRuleContext(DirectiveContext.class,i);
		}
		public List<TerminalNode> DOT() { return getTokens(XhailParser.DOT); }
		public List<DirectiveContext> directive() {
			return getRuleContexts(DirectiveContext.class);
		}
		public TerminalNode EOF() { return getToken(XhailParser.EOF, 0); }
		public ClauseContext clause(int i) {
			return getRuleContext(ClauseContext.class,i);
		}
		public List<ClauseContext> clause() {
			return getRuleContexts(ClauseContext.class);
		}
		public TerminalNode DOT(int i) {
			return getToken(XhailParser.DOT, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XhailListener ) ((XhailListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XhailListener ) ((XhailListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AGGR_AVG) | (1L << AGGR_COUNT) | (1L << AGGR_EVEN) | (1L << AGGR_MAX) | (1L << AGGR_MIN) | (1L << AGGR_ODD) | (1L << AGGR_SUM) | (1L << ARITH_ABS) | (1L << ARITH_DIVIDE) | (1L << ARITH_MODULUS) | (1L << ARITH_POWER) | (1L << BIT_NOT) | (1L << DIR_COMPUTE) | (1L << DIR_CONST) | (1L << DIR_DOMAIN) | (1L << DIR_EXAMPLE) | (1L << DIR_EXTERNAL) | (1L << DIR_HIDE) | (1L << DIR_MAXIMIZE) | (1L << DIR_MINIMIZE) | (1L << DIR_MODEB) | (1L << DIR_MODEH) | (1L << DIR_SHOW) | (1L << BAR) | (1L << CURLY_LEFT) | (1L << DOT) | (1L << IF) | (1L << MINUS) | (1L << SQUARE_LEFT) | (1L << INFIMUM) | (1L << SUPREMUM) | (1L << IDENTIFIER))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (INTEGER - 64)) | (1L << (STRING - 64)) | (1L << (VARIABLE - 64)))) != 0)) {
				{
				setState(73);
				switch (_input.LA(1)) {
				case DIR_COMPUTE:
				case DIR_CONST:
				case DIR_DOMAIN:
				case DIR_EXAMPLE:
				case DIR_EXTERNAL:
				case DIR_HIDE:
				case DIR_MAXIMIZE:
				case DIR_MINIMIZE:
				case DIR_MODEB:
				case DIR_MODEH:
				case DIR_SHOW:
					{
					setState(70); directive();
					}
					break;
				case AGGR_AVG:
				case AGGR_COUNT:
				case AGGR_EVEN:
				case AGGR_MAX:
				case AGGR_MIN:
				case AGGR_ODD:
				case AGGR_SUM:
				case ARITH_ABS:
				case ARITH_DIVIDE:
				case ARITH_MODULUS:
				case ARITH_POWER:
				case BIT_NOT:
				case BAR:
				case CURLY_LEFT:
				case IF:
				case MINUS:
				case SQUARE_LEFT:
				case INFIMUM:
				case SUPREMUM:
				case IDENTIFIER:
				case INTEGER:
				case STRING:
				case VARIABLE:
					{
					setState(71); clause();
					}
					break;
				case DOT:
					{
					setState(72); match(DOT);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DirectiveContext extends ParserRuleContext {
		public ModeHeadContext modeHead() {
			return getRuleContext(ModeHeadContext.class,0);
		}
		public MinimizeContext minimize() {
			return getRuleContext(MinimizeContext.class,0);
		}
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public ExampleContext example() {
			return getRuleContext(ExampleContext.class,0);
		}
		public ExternalContext external() {
			return getRuleContext(ExternalContext.class,0);
		}
		public ShowContext show() {
			return getRuleContext(ShowContext.class,0);
		}
		public ComputeContext compute() {
			return getRuleContext(ComputeContext.class,0);
		}
		public DomainContext domain() {
			return getRuleContext(DomainContext.class,0);
		}
		public HideContext hide() {
			return getRuleContext(HideContext.class,0);
		}
		public ModeBodyContext modeBody() {
			return getRuleContext(ModeBodyContext.class,0);
		}
		public MaximizeContext maximize() {
			return getRuleContext(MaximizeContext.class,0);
		}
		public DirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XhailListener ) ((XhailListener)listener).enterDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XhailListener ) ((XhailListener)listener).exitDirective(this);
		}
	}

	public final DirectiveContext directive() throws RecognitionException {
		DirectiveContext _localctx = new DirectiveContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_directive);
		try {
			setState(91);
			switch (_input.LA(1)) {
			case DIR_COMPUTE:
				enterOuterAlt(_localctx, 1);
				{
				setState(80); compute();
				}
				break;
			case DIR_CONST:
				enterOuterAlt(_localctx, 2);
				{
				setState(81); constant();
				}
				break;
			case DIR_DOMAIN:
				enterOuterAlt(_localctx, 3);
				{
				setState(82); domain();
				}
				break;
			case DIR_EXAMPLE:
				enterOuterAlt(_localctx, 4);
				{
				setState(83); example();
				}
				break;
			case DIR_EXTERNAL:
				enterOuterAlt(_localctx, 5);
				{
				setState(84); external();
				}
				break;
			case DIR_HIDE:
				enterOuterAlt(_localctx, 6);
				{
				setState(85); hide();
				}
				break;
			case DIR_MAXIMIZE:
				enterOuterAlt(_localctx, 7);
				{
				setState(86); maximize();
				}
				break;
			case DIR_MINIMIZE:
				enterOuterAlt(_localctx, 8);
				{
				setState(87); minimize();
				}
				break;
			case DIR_MODEB:
				enterOuterAlt(_localctx, 9);
				{
				setState(88); modeBody();
				}
				break;
			case DIR_MODEH:
				enterOuterAlt(_localctx, 10);
				{
				setState(89); modeHead();
				}
				break;
			case DIR_SHOW:
				enterOuterAlt(_localctx, 11);
				{
				setState(90); show();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComputeContext extends ParserRuleContext {
		public TerminalNode CURLY_LEFT() { return getToken(XhailParser.CURLY_LEFT, 0); }
		public TerminalNode DOT() { return getToken(XhailParser.DOT, 0); }
		public TerminalNode DIR_COMPUTE() { return getToken(XhailParser.DIR_COMPUTE, 0); }
		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class,i);
		}
		public TerminalNode INTEGER() { return getToken(XhailParser.INTEGER, 0); }
		public List<TerminalNode> COMMA() { return getTokens(XhailParser.COMMA); }
		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}
		public TerminalNode CURLY_RIGHT() { return getToken(XhailParser.CURLY_RIGHT, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(XhailParser.COMMA, i);
		}
		public ComputeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XhailListener ) ((XhailListener)listener).enterCompute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XhailListener ) ((XhailListener)listener).exitCompute(this);
		}
	}

	public final ComputeContext compute() throws RecognitionException {
		ComputeContext _localctx = new ComputeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_compute);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93); match(DIR_COMPUTE);
			setState(95);
			_la = _input.LA(1);
			if (_la==INTEGER) {
				{
				setState(94); match(INTEGER);
				}
			}

			setState(97); match(CURLY_LEFT);
			setState(98); literal();
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(99); match(COMMA);
				setState(100); literal();
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(106); match(CURLY_RIGHT);
			setState(107); match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public TerminalNode EQUALS() { return getToken(XhailParser.EQUALS, 0); }
		public TerminalNode DOT() { return getToken(XhailParser.DOT, 0); }
		public GroundAtomContext groundAtom() {
			return getRuleContext(GroundAtomContext.class,0);
		}
		public TerminalNode DIR_CONST() { return getToken(XhailParser.DIR_CONST, 0); }
		public TerminalNode IDENTIFIER() { return getToken(XhailParser.IDENTIFIER, 0); }
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XhailListener ) ((XhailListener)listener).enterConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XhailListener ) ((XhailListener)listener).exitConstant(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_constant);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109); match(DIR_CONST);
			setState(110); match(IDENTIFIER);
			setState(111); match(EQUALS);
			setState(112); groundAtom();
			setState(113); match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DomainContext extends ParserRuleContext {
		public TerminalNode DIR_DOMAIN() { return getToken(XhailParser.DIR_DOMAIN, 0); }
		public TerminalNode DOT() { return getToken(XhailParser.DOT, 0); }
		public GroundAtomContext groundAtom() {
			return getRuleContext(GroundAtomContext.class,0);
		}
		public DomainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_domain; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XhailListener ) ((XhailListener)listener).enterDomain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XhailListener ) ((XhailListener)listener).exitDomain(this);
		}
	}

	public final DomainContext domain() throws RecognitionException {
		DomainContext _localctx = new DomainContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_domain);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); match(DIR_DOMAIN);
			setState(116); groundAtom();
			setState(117); match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExampleContext extends ParserRuleContext {
		public TerminalNode NOT() { return getToken(XhailParser.NOT, 0); }
		public TerminalNode DOT() { return getToken(XhailParser.DOT, 0); }
		public PriorityContext priority() {
			return getRuleContext(PriorityContext.class,0);
		}
		public WeightContext weight() {
			return getRuleContext(WeightContext.class,0);
		}
		public GroundAtomContext groundAtom() {
			return getRuleContext(GroundAtomContext.class,0);
		}
		public TerminalNode DIR_EXAMPLE() { return getToken(XhailParser.DIR_EXAMPLE, 0); }
		public ExampleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_example; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XhailListener ) ((XhailListener)listener).enterExample(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XhailListener ) ((XhailListener)listener).exitExample(this);
		}
	}

	public final ExampleContext example() throws RecognitionException {
		ExampleContext _localctx = new ExampleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_example);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119); match(DIR_EXAMPLE);
			setState(121);
			_la = _input.LA(1);
			if (_la==NOT) {
				{
				setState(120); match(NOT);
				}
			}

			setState(123); groundAtom();
			setState(125);
			_la = _input.LA(1);
			if (_la==EQUALS) {
				{
				setState(124); weight();
				}
			}

			setState(128);
			_la = _input.LA(1);
			if (_la==AT) {
				{
				setState(127); priority();
				}
			}

			setState(130); match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExternalContext extends ParserRuleContext {
		public TerminalNode DIR_EXTERNAL() { return getToken(XhailParser.DIR_EXTERNAL, 0); }
		public TerminalNode DOT() { return getToken(XhailParser.DOT, 0); }
		public TerminalNode INTEGER() { return getToken(XhailParser.INTEGER, 0); }
		public TerminalNode SLASH() { return getToken(XhailParser.SLASH, 0); }
		public TerminalNode IDENTIFIER() { return getToken(XhailParser.IDENTIFIER, 0); }
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public ExternalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_external; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XhailListener ) ((XhailListener)listener).enterExternal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XhailListener ) ((XhailListener)listener).exitExternal(this);
		}
	}

	public final ExternalContext external() throws RecognitionException {
		ExternalContext _localctx = new ExternalContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_external);
		try {
			setState(141);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(132); match(DIR_EXTERNAL);
				setState(133); match(IDENTIFIER);
				setState(134); match(SLASH);
				setState(135); match(INTEGER);
				setState(136); match(DOT);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(137); match(DIR_EXTERNAL);
				setState(138); predicate();
				setState(139); match(DOT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
